--- a/index.html
+++ b/index.html
@@ -2,109 +2,145 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resumet</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2? display=swap" rel="stylesheet"> семья=Монтсеррат:wght@400;700&
-</head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
 
 <body>
-    <header>
-        <nav>
-            <h2>WebStudio</h2>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href=""></a>Портфолио</li>
-                <li><a href=""></a>Контакты</li>
-            </ul>
+    <header class="header">
+        <nav class="header-navigation">
+            <a class="header-link"href="">WebStudio</a>
+           <ul class="header-list list">
+               <li class="header-item link"><a class="header-link" href="">Студия</a></li>
+               <li class="header-item link"><a class="header-link" href=""></a>Портфолио</li>
+               <li class="header-item link"><a class="header-link" href=""></a>Контакты</li>
+           </ul>
         </nav>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-        <button type="button">info@devstudio.com</button>
-    </header>
-    <main>
-        <section>
-            <div>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-            </div>
-        </section>
-        <section>
-            <div>
-                <h2>Внимание к деталям</h2>
-                <h3>Идейные соображения, а также начало повседневной работы по формированию позиции.</h3>
-            </div>
-            <div>
-                <h2>Пунктуальность</h2>
-                <h3>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</h3>
+           <a class="header-tell link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-tell link" href="info@devstudio.com">info@devstudio.com</a>
+           </header>
+        <main>
+            <section class="hero">
+                <div>
+                    <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
+                    <button class="hero-button" type="button">Заказать услугу</button>
 
-            </div>
-            <div>
-                <h2>Планирование</h2>
-                <h3>Равным образом консультация с широким активом в значительной степени обуславливает.</h3>
-            </div>
-            <div>
-                <h2>Современные технологии</h2>
-                <h3>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</h3>
-            </div>
-        </section>
-        <section>
-            <h1>Чем мы занимаемся</h1>
-            <ul>
+                </div>
+            </section>
+            <section>
+                <ul>
                 <li>
-                    <img src="./Модуль 1/img.jpg" alt="набирает текст" width="370" height="294">
-                </li>
-                <li><img src="./Модуль 1/img (1).jpg" alt="смтрит на интерфес" width="370" height="294">
-                    ></li>
-                <li>
-                    <img src="./Модуль 1/img (2).jpg" alt="фото" width="370" height="294">
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h1>Наша команда</h1>
-            <ul>
-                <li>
-                    <img src="./Модуль 1/img 1.jpg" alt="фото" width="810" height="780">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h4>Внимание к деталям</h4>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <img src="./Модуль 1/img 2.jpg" alt="фото" width="810" height="780">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h4>Пунктуальность</h4>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <img src="./Модуль 1/img 3.jpg" alt="фото" width="810" height="780">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h4>Планирование</h4>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <img src="./Модуль 1/img 4.jpg" alt="фото" width="810" height="780">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h4>Современные технологии</h4>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <h1>WebStudio</h1>
-        <address>
-            <ul>
-                <li>
-                    <a href="https://goo.gl/maps/rCSKf7v6BH6SyEzp8" target="_blank" rel="noopener noreferre">г. Киев,
-                        пр-т Леси
-                        Украинки, 26</a>
-                </li>
-                <li>
-                    <a href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
-    </footer>
+                </ul>               
+               
+            </section>
+            <section>
+                <h2>Чем мы занимаемся</h2>
+                <ul>
+                    <li>
+                        <img 
+                             src="./Mode 1/typing text.jpg" 
+                             alt="typing text"
+                             width="370"
+                             height="294">
+                    </li>
+                    <li><img 
+                        src="./Mode 1/looks at the interface.jpg" 
+                        alt="looks at the interface"
+                         width="370"
+                         height="294">
+                        ></li>
+                    <li>
+                        <img 
+                        src="./Mode 1/Color palette.jpg" 
+                        alt="Color palette"
+                        width="370"
+                        height="294"
+                        ></li>
+                </ul>
+            </section>
+            <section>
+                <h2>Наша команда</h2>
+                <ul>
+                    <li> 
+                        <img 
+                        src="./Модуль 1/Photo 1.jpg" 
+                        alt="Phоtо"
+                        width="810"
+                        height="780"
+                        >
+                        <h3>Игорь Демьяненко</h3>
+                        <p lang="en">Product Designer</p>
+                    </li>
+                    <li>
+                       <img 
+                        src="./Mode 1/Photo 2.jpg" 
+                        alt="фото"
+                        width="810"
+                        height="780"
+                        >
+                        <h3>Ольга Репина</h3>
+                        <p lang="en">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img 
+                        src="./Mode 1/Photo 3.jpg" 
+                        alt="фото"
+                        width="810"
+                        height="780"
+                        >
+                        <h3>Николай Тарасов</h3>
+                        <p lang="en">Marketing</p>
+                    </li>
+                    <li>
+                        <img 
+                        src="./Mode 1/Photo 4.jpg" 
+                        alt="фото"
+                        width="810"
+                        height="780"
+                        >
+                        <h3>Михаил Ермаков</h3>
+                        <p lang="en">UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <a href="">WebStudio</a>
+            <address>
+                <ul>
+
+                     <li>
+                        <a href="https://goo.gl/maps/rCSKf7v6BH6SyEzp8" target="_blank" rel="noopener noreferre">г. Киев, пр-т Леси
+                            Украинки, 26</a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </footer>
 </body>
