--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
         <nav class="header-navigation">
             <a class="header-link"href="">WebStudio</a>
            <ul class="header-list list">
-               <li class="header-item link"><a class="header-link" href="">Студия</a></li>
-               <li class="header-item link"><a class="header-link" href=""></a>Портфолио</li>
-               <li class="header-item link"><a class="header-link" href=""></a>Контакты</li>
+               <li class="header-item">
+                   <a class="header-link link" href="">Студия</a></li>
+               <li class="header-item">
+                   <a class="header-link link" href="">Портфолио</a></li>
+               <li class="header-item">
+                   <a class="header-link link" href="">Контакты</a></li>
            </ul>
         </nav>
            <a class="header-tell link" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -33,112 +36,112 @@
 
                 </div>
             </section>
-            <section>
-                <ul>
-                <li>
-                    <h4>Внимание к деталям</h4>
+            <section class="about">
+                <ul class="about-list list">
+                <li class="about-item">
+                    <h3 class="about-item-title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h4>Пунктуальность</h4>
+                <li class="about-item">
+                    <h3 class="about-item-title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h4>Планирование</h4>
+                <li class="about-item">
+                    <h3 class="about-item-title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h4>Современные технологии</h4>
+                <li class="about-item">
+                    <h3 class="about-item-title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
                 </ul>               
                
             </section>
-            <section>
-                <h2>Чем мы занимаемся</h2>
-                <ul>
-                    <li>
+            <section class="work">
+                <h2 class="work-title">Чем мы занимаемся</h2>
+                <ul class="work-list list">
+                    <li class="work-item">
                         <img 
-                             src="./Mode 1/typing text.jpg" 
+                             src="./mode-1/typing-text.jpg" 
                              alt="typing text"
                              width="370"
                              height="294">
                     </li>
-                    <li><img 
-                        src="./Mode 1/looks at the interface.jpg" 
+                    <li class="work-item"><img 
+                        src="./mode-1/looks-at-the-interface.jpg" 
                         alt="looks at the interface"
                          width="370"
                          height="294">
                         ></li>
-                    <li>
+                    <li class="work-item">
                         <img 
-                        src="./Mode 1/Color palette.jpg" 
+                        src="./mode-1/Color-palette.jpg" 
                         alt="Color palette"
                         width="370"
                         height="294"
                         ></li>
                 </ul>
             </section>
-            <section>
-                <h2>Наша команда</h2>
-                <ul>
-                    <li> 
+            <section class="command">
+                <h2 class="command-title">Наша команда</h2>
+                <ul class="command-list list">
+                    <li class="command-item"> 
                         <img 
-                        src="./Модуль 1/Photo 1.jpg" 
+                        src="./mode-1/Photo-1.jpg" 
                         alt="Phоtо"
-                        width="810"
-                        height="780"
+                        width="270"
+                        height="260"
                         >
-                        <h3>Игорь Демьяненко</h3>
+                        <h3 class="command-item-title" >Игорь Демьяненко</h3>
                         <p lang="en">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="command-item">
                        <img 
-                        src="./Mode 1/Photo 2.jpg" 
+                        src="./mode-1/Photo-2.jpg" 
                         alt="фото"
-                        width="810"
-                        height="780"
+                        width="270"
+                        height="260"
                         >
-                        <h3>Ольга Репина</h3>
+                        <h3 class="command-item-title">Ольга Репина</h3>
                         <p lang="en">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="command-item">
                         <img 
-                        src="./Mode 1/Photo 3.jpg" 
+                        src="./mode-1/Photo-3.jpg" 
                         alt="фото"
-                        width="810"
-                        height="780"
+                        width="270"
+                        height="260"
                         >
-                        <h3>Николай Тарасов</h3>
+                        <h3 class="command-item-title">Николай Тарасов</h3>
                         <p lang="en">Marketing</p>
                     </li>
-                    <li>
+                    <li class="command-item">
                         <img 
-                        src="./Mode 1/Photo 4.jpg" 
+                        src="./mode-1/Photo-4.jpg" 
                         alt="фото"
-                        width="810"
-                        height="780"
+                        width="270"
+                        height="260"
                         >
-                        <h3>Михаил Ермаков</h3>
+                        <h3 class="command-item-title">Михаил Ермаков</h3>
                         <p lang="en">UI Designer</p>
                     </li>
                 </ul>
             </section>
         </main>
-        <footer>
-            <a href="">WebStudio</a>
+        <footer class="contacs">
+            <a href="" class="contacs-text">WebStudio</a>
             <address>
-                <ul>
+                <ul class="contacs-list list">
 
-                     <li>
-                        <a href="https://goo.gl/maps/rCSKf7v6BH6SyEzp8" target="_blank" rel="noopener noreferre">г. Киев, пр-т Леси
+                     <li class="contacs-item">
+                        <a href="https://goo.gl/maps/rCSKf7v6BH6SyEzp8" target="_blank" rel="noopener noreferre" class="contacs-item-link link">г. Киев, пр-т Леси
                             Украинки, 26</a>
                     </li>
-                    <li>
-                        <a href="mailto:info@example.com">info@example.com</a>
+                    <li class="contacs-item">
+                        <a href="mailto:info@example.com" class="contacs-item-link link">info@example.com</a>
                     </li>
-                    <li>
-                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <li class="contacs-item">
+                        <a href="tel:+380961111111" class="contacs-item-tell link">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </address>
