--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <ul class="command-list list">
                     <li class="command-item"> 
                         <img 
-                        src="./mode-1/Photo-1.jpg" 
+                        src="./mode-1/Photo.jpg" 
                         alt="Phоtо"
                         width="270"
                         height="260"
